<resources>
    <string name="app_name">ClientNeoCafe</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="registration">Регистрация</string>
    <string name="login">Войти</string>
    <string name="get_code">Получить код</string>
    <string name="editText_phone">+000 000 000 000</string>
    <string name="error_phone">Номер телефона введён неверно,\n попробуйте еще раз</string>
    <string name="text_code">Введите 4-х значный код,\n отправленный на номер %s</string>
    <string name="text_error_code">Код введен неверно, попробуйте еще раз</string>
    <string name="btn_enter">Войти</string>
    <string name="text_send_again">Отправить еще раз</string>
    <string name="text_registration">Регистрация</string>
    <string name="text_date_for_sale">Введите дату рождения для последующих\n персональных скидок</string>
    <string name="text_skip">Пропустить</string>
    <string name="text_input_name">Имя</string>
    <string name="text_welcome">Добро пожаловать!</string>
    <string name="text_our_menu">Наше меню</string>
    <string name="text_popular">Популярное</string>
    <string name="text_menu">Меню</string>
    <string name="text_milk">Молоко</string>
    <string name="text_syrup">Сиропы</string>
    <string name="text_price"> %d с</string>
    <string name="text_cart">Корзина</string>
    <string name="btn_order">Заказать</string>
    <string name="text_no_choose">Вы еще ничего не выбрали</string>
    <string name="btn_in_menu">В меню</string>
    <string name="button_no">Нет</string>
    <string name="button_yes">Да</string>
    <string name="button_cancel">Отмена</string>
    <string name="button_write_bonuses">Списать</string>
    <string name="text_debiting_our_bonuses">Введите количество бонусов, которое \n хотите списать</string>
    <string name="text_debiting_bonuses">У вас есть %d бонусов, хотите \n использовать их?</string>
    <string name="text_bonuses">Списание бонусов</string>
    <string name="text_history">История заказов</string>
    <string name="text_open_order">Открытый заказ</string>
    <string name="text_closed_order">Завершенные</string>
    <string name="btn_repeat">Повторить</string>
    <string name="text_bonuses_order">Бонусы к списанию:</string>
    <string name="text_branches">Филиалы</string>
    <string name="text_2gis">Мы переведем вас в 2ГИС</string>
    <string name="text_discr_2gis">Вы сможете быстро сориентироваться \nи найти быстрый маршрут к нам!\n Ждем вас!</string>
    <string name="btn_stay">Остаться</string>
    <string name="btn_go_over">Перейти</string>
    <string name="text_profile">Профиль</string>
    <string name="text_actual_order">Актуальный заказ</string>
    <string name="text_edit_profile">Редактирование</string>
    <string name="btn_save">Сохранить</string>
    <string name="text_notifications">Уведомления</string>
    <string name="text_no_edit">Изменения не сохранены</string>
    <string name="text_exit">Хотите покинуть страницу\n редактирования?</string>
    <string name="button_yes_edit">Да</string>
    <string name="button_non">Нет</string>
    <string name="text_bonuse">Бонусы</string>
    <string name="text_info_bonuses">Накапливайте бонусы и совершайте\n выгодные для Вас заказы!\n 1 бонус = 1 сом</string>
    <string name="button_ok">Хорошо</string>
    <string name="text_sign_out">Вы действительно хотите \n выйти?</string>
    <string name="text_out">Выход</string>
    <string name="text_nice_addition">Приятное дополнение</string>
    <string name="text_our_bonuses">Ваши бонусы:%d</string>
</resources>