<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="20dp"
    android:background="@color/backgr"
    android:layout_marginHorizontal="20dp">

    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/text_out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/text_out"
            style="@style/TextTitle"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/text_sign_out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:text="@string/text_sign_out"
            android:layout_marginTop="20dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_yes"
                android:layout_width="140dp"
                android:layout_height="56dp"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:background="@drawable/button_backgr_stroke_orange"
                android:textColor="@color/orange"
                android:enabled="true"
                android:textAllCaps="false"
                android:text="@string/button_yes_edit"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_no"
                android:layout_width="140dp"
                android:layout_height="56dp"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:background="@drawable/button_backgr_add"
                android:gravity="center"
                android:text="@string/button_non"/>
        </LinearLayout>

    </LinearLayout>


</androidx.cardview.widget.CardView>