<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgr"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.cart.HistoryFragment">

    <ImageView
        android:id="@+id/image_back"
        android:layout_width="26dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/icn_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_history"
        style="@style/TextTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:text="@string/text_history"
        app:layout_constraintStart_toEndOf="@+id/image_back"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/image_bell"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/icn_notif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_open_order"
        style="@style/TextTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="25dp"
        android:text="@string/text_open_order"
        app:layout_constraintStart_toStartOf="@+id/image_back"
        app:layout_constraintTop_toBottomOf="@id/image_back" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_open_order"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_open_order" />

    <TextView
        android:id="@+id/text_closed_order"
        style="@style/TextTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/text_closed_order"
        android:textSize="25dp"
        app:layout_constraintStart_toStartOf="@+id/image_back"
        app:layout_constraintTop_toBottomOf="@id/recycler_open_order" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_closed_order"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_closed_order" />



</androidx.constraintlayout.widget.ConstraintLayout>